--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -67,24 +67,27 @@
     height: fit-content;
     flex-wrap: nowrap;   
     position: relative;
+    a {
+        text-decoration: none;
+        color: currentColor;
+        font-size: 1.1em;
+        border-radius: 5px;
+        padding: 1.5%;
+        margin: 2%;
+        display: flex;
+        align-items: center; 
+    }
+
 }
-.link-panel a {
-    text-decoration: none;
-    color: currentColor;
-    font-size: 1.1em;
-    border-radius: 5px;
-    padding: 1.5%;
-    margin: 2%;
-    display: flex;
-    align-items: center; 
-}
+
 #i-search {
     color: $textWhite;
 }
 .lang {
     background: none;
     color: currentColor;
-    border: none;   
+    border: none;
+    margin: 2% 7%;   
 }
 @media screen and (min-width: 650px), (aspect-ratio: 4/3) {
 
@@ -93,7 +96,7 @@
         border: 3px solid ;
     }
  }
- @media screen and (max-width: 500px), (aspect-ratio: 4/3) {
+ @media screen and (max-width: 560px), (aspect-ratio: 4/3) {
 
     .logo {
         font-size: 1.6em;
