--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,7 +1,7 @@
 
 .catalog-body{
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: black;
     display: flex;
     flex-direction: column;
@@ -21,9 +21,9 @@
     }
 }
 .main-list {
-    width: fit-content;
+    
     width: 898px;
-    min-height: 501px;
+    height: fit-content;
     display: flex;
     flex-wrap: wrap;
     height: fit-content;
