--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -6,7 +6,7 @@
 }
 .mySwiper {
     height: 50vh;
-    max-width: 1000px;
+    max-width: 900px;
     margin-bottom: 5vh;
     overflow: visible !important;     
 }
@@ -34,17 +34,18 @@
     position: absolute;
     bottom: 0;
     padding: 2%; 
-    height: 35%;
+    height: 40%;
     overflow: hidden;
     color: $textWhite;
     text-shadow: 0 0 5px black;
-    p {
-        font-size: .9em;
-    }
+}
+.slide-synopsis {
+    font-size: 1em;
 }
 .slide-header {
     display: flex;
     justify-content: left;
+    align-items: center;
     h2 {
         margin: 0 2%;
         font-size: 1.8em;
@@ -70,7 +71,15 @@
         font-size: .8em;
     }
     .slide-info {
-        font-size: .7em;
+        font-size: .6em;
+    }
+}
+@media screen and (max-width: 450px){
+    .slide-header{
+        display: block;
+    }
+    .slide-text{
+        height: 45%;
     }
 }
 .slide-tag {
