--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -10,23 +10,27 @@
     color: $textWhite;
     padding: 0 2%;
     
+    
 }
 .logo-link{
    // max-width: 50%;
+    
     display: flex;
     align-items: center;
     height: inherit;
     text-decoration: none;
     color: currentColor;
+    font-size: .9em;
     
 }
 .logo {
     font-family: $logoFont;
     border: 2px solid ;
-    padding: 3px;
     border-radius: 5%;
-    font-size: 2em;
+    
     width: 100%;
+    
+    
 
     animation-name: borderColor;
 	animation-duration: 12s;
