--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -27,14 +27,13 @@
   height: inherit;
   text-decoration: none;
   color: currentColor;
+  font-size: .9em;
 }
 
 .logo {
   font-family: "Major Mono Display", monospace;
   border: 2px solid;
-  padding: 3px;
   border-radius: 5%;
-  font-size: 2em;
   width: 100%;
   -webkit-animation-name: borderColor;
           animation-name: borderColor;
@@ -182,7 +181,7 @@
 
 .mySwiper {
   height: 50vh;
-  max-width: 1000px;
+  max-width: 900px;
   margin-bottom: 5vh;
   overflow: visible !important;
 }
@@ -217,14 +216,14 @@
   position: absolute;
   bottom: 0;
   padding: 2%;
-  height: 35%;
+  height: 40%;
   overflow: hidden;
   color: #f8f8ff;
   text-shadow: 0 0 5px black;
 }
 
-.slide-text p {
-  font-size: .9em;
+.slide-synopsis {
+  font-size: 1em;
 }
 
 .slide-header {
@@ -234,6 +233,9 @@
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .slide-header h2 {
@@ -290,7 +292,16 @@
     font-size: .8em;
   }
   .slide-info {
-    font-size: .7em;
+    font-size: .6em;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .slide-header {
+    display: block;
+  }
+  .slide-text {
+    height: 45%;
   }
 }
 
@@ -418,7 +429,7 @@
 
 .catalog-body {
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -447,18 +458,15 @@
 }
 
 .main-list {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
   width: 898px;
-  min-height: 501px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   gap: 10px;
   margin: 3% auto;
@@ -912,10 +920,10 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  font-size: 1.2em;
+  font-size: 1.15em;
   font-weight: 300;
   text-align: justify;
-  height: 65vh;
+  height: 68vh;
 }
 
 .about-content video {
