--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,11 +1,12 @@
 
 .catalog-body{
     width: 100%;
-    height: auto;
+    height: 100%;
     background-color: black;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: flex-start;
    
 }
 .filter-container{
@@ -23,10 +24,11 @@
 .main-list {
     
     width: 898px;
-    height: fit-content;
     display: flex;
-    flex-wrap: wrap;
     height: fit-content;
+    min-height: 65vh;
+    flex-wrap: wrap;
+    align-content: flex-start;
     gap: 10px;   
     margin: 3% auto;
 }
@@ -68,15 +70,17 @@
     .main-list {
         max-width: 705px;
     }
+    .catalog-body{ 
+        height: fit-content;
+        
+    }
 }
 @media screen and (max-width: 705px) {  
     .main-list {
         max-width: 519px;
         min-height: 85vh;
     }
-    .catalog-body{ 
-        height: fit-content;
-    }
+    
 }
 @media screen and (max-width: 540px) {
     .main-list {
