--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,6 +1,7 @@
 .nav-bar {
     display: flex;
     height: 10vh ;
+    min-height: 80px;
     width: 100%;
     align-items: center;
     justify-content: space-betweenx;
