--- a/src/styles/_aboutContact.scss
+++ b/src/styles/_aboutContact.scss
@@ -8,6 +8,7 @@
 }
 .about-content {
     display: flex;
+    height: fit-content;
     padding: 2%;
     margin-bottom: 2%;
     justify-content: center;
