--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -919,6 +919,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   padding: 2%;
   margin-bottom: 2%;
   -webkit-box-pack: center;
