--- a/src/styles/_aboutContact.scss
+++ b/src/styles/_aboutContact.scss
@@ -1,6 +1,7 @@
 .about-body {
     width: 98%;  
     max-width: 800px;
+    height: 100%;
     margin: 2% auto;
     display: flex;
     flex-direction: column;
