--- a/src/styles/_aboutContact.scss
+++ b/src/styles/_aboutContact.scss
@@ -1,7 +1,7 @@
 .about-body {
     width: 98%;  
     max-width: 800px;
-    height: 100%;
+    height: fit-content;
     margin: 2% auto;
     display: flex;
     flex-direction: column;
@@ -14,10 +14,11 @@
     margin-bottom: 2%;
     justify-content: center;
     align-items: flex-start;
+   
     font-size: 1.15em;
     font-weight: 300;  
     text-align: justify;
-    height: 68vh;
+    
     video{
         border-radius: 5px;
         height: 100%;
@@ -36,6 +37,7 @@
     p {
         max-width: 400px;
         padding: 5%;   
+        
     }
 }
 @media screen and (max-width: 650px), (aspect-ratio: 4/3) {
