--- a/src/styles/_aboutContact.scss
+++ b/src/styles/_aboutContact.scss
@@ -72,7 +72,7 @@
 .form-body { 
     width: 90%; 
     max-width: 600px;
-    height: fit-content;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
