--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -2,11 +2,13 @@
 .catalog-body{
     width: 100%;
     height: 100%;
+    max-height: fit-content;
     background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    
    
 }
 .filter-container{
@@ -22,11 +24,9 @@
     }
 }
 .main-list {
-    
+    min-height: 70vh;
     width: 935px;
     display: flex;
-    height: fit-content;
-    min-height: 50vh;
     flex-wrap: wrap;
     align-content: flex-start;
     gap: 10px;   
@@ -38,6 +38,7 @@
     list-style: none;
     height: 8vh;
     width: auto;
+    margin-top: auto;
     gap: 20px;
     display: flexbox;
     justify-content: center;
@@ -67,15 +68,13 @@
 }
 
 @media screen and (max-width: 945px) {
+    
     .main-list {
         max-width: 705px;
-        min-height: 68vh;
-    }
-    .catalog-body{ 
-        height: fit-content;
         
-        
+        height: 100%;
     }
+    
 }
 @media screen and (max-width: 705px) {  
     .main-list {
