--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -431,6 +431,9 @@
 .catalog-body {
   width: 100%;
   height: 100%;
+  max-height: -webkit-fit-content;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -462,14 +465,11 @@
 }
 
 .main-list {
+  min-height: 70vh;
   width: 935px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  min-height: 50vh;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-line-pack: start;
@@ -486,6 +486,7 @@
   list-style: none;
   height: 8vh;
   width: auto;
+  margin-top: auto;
   gap: 20px;
   display: flexbox;
   -webkit-box-pack: center;
@@ -523,12 +524,7 @@
 @media screen and (max-width: 945px) {
   .main-list {
     max-width: 705px;
-    min-height: 68vh;
-  }
-  .catalog-body {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    height: 100%;
   }
 }
 
@@ -1102,7 +1098,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 .loader {
