--- a/src/styles/_aboutContact.scss
+++ b/src/styles/_aboutContact.scss
@@ -110,7 +110,7 @@
 
 .social-icon {
     width: 100%;
-    height: 100%;
+    min-height: 35vh;
     display: flex;
     flex-direction: column;
     align-items: center;
