--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,12 +1,11 @@
 
 .catalog-body{
     width: 100%;
-    height: 100%;
-    max-height: fit-content;
+    min-height: 90vh;
     background-color: black;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content:space-around;
     align-items: flex-start;
     
    
@@ -24,7 +23,7 @@
     }
 }
 .main-list {
-    min-height: 70vh;
+    min-height: 50vh;
     width: 935px;
     display: flex;
     flex-wrap: wrap;
@@ -37,8 +36,6 @@
     color: ghostwhite;
     list-style: none;
     height: 8vh;
-    
-    margin-top: auto;
     gap: 20px;
     display: flexbox;
     justify-content: center;
