--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -217,7 +217,7 @@
   position: absolute;
   bottom: 0;
   padding: 2%;
-  height: 40%;
+  height: 35%;
   overflow: hidden;
   color: #f8f8ff;
   text-shadow: 0 0 5px black;
@@ -290,7 +290,7 @@
     font-size: 1.2em;
   }
   .slide-synopsis {
-    font-size: .8em;
+    font-size: .9em;
   }
   .slide-info {
     font-size: .6em;
@@ -430,10 +430,7 @@
 
 .catalog-body {
   width: 100%;
-  height: 100%;
-  max-height: -webkit-fit-content;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
+  min-height: 90vh;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -442,9 +439,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -465,7 +461,7 @@
 }
 
 .main-list {
-  min-height: 70vh;
+  min-height: 50vh;
   width: 935px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -485,7 +481,6 @@
   color: ghostwhite;
   list-style: none;
   height: 8vh;
-  margin-top: auto;
   gap: 20px;
   display: flexbox;
   -webkit-box-pack: center;
@@ -1097,7 +1092,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .loader {
@@ -1191,6 +1186,7 @@
 
 .footer {
   width: 100%;
+  height: 5vh;
   border-top: 1px solid black;
   margin-top: auto;
   display: -webkit-box;
