--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -19,8 +19,8 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    height: 100%;
-  };
+    min-height: 100vh;
+  }
 
   .loader {
     font-family: $logoFont;
@@ -71,6 +71,7 @@
 
   .footer {
     width: 100%;
+    height: 5vh;
     border-top: 1px solid black;
     margin-top: auto;
     display: flex;
