--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,3 +1,4 @@
+
 .nav-bar {
     display: flex;
     height: 10vh ;
@@ -10,29 +11,23 @@
     gap: 2%;
     color: $textWhite;
     padding: 0 2%;
-    
-    
+    z-index: 5;
+
 }
 .logo-link{
-   // max-width: 50%;
-    
     display: flex;
     align-items: center;
     height: inherit;
     text-decoration: none;
     color: currentColor;
-    font-size: .9em;
-    
+    font-size: .9em;  
 }
 .logo {
     font-family: $logoFont;
     border: 2px solid ;
     border-radius: 5%;
-    
     width: 100%;
-    
-    
-
+    font-size: 2.5em;
     animation-name: borderColor;
 	animation-duration: 12s;
 	animation-iteration-count: infinite;
@@ -72,49 +67,93 @@
     height: fit-content;
     flex-wrap: nowrap;   
     position: relative;
+    gap: 2%;
     a {
         text-decoration: none;
         color: currentColor;
         font-size: 1.1em;
-        border-radius: 5px;
         padding: 1.5%;
-        margin: 2%;
         display: flex;
         align-items: center; 
     }
-
 }
 
 #i-search {
     color: $textWhite;
 }
+
+.dropdown-menu {
+    display: none;
+    position: relative;
+    color: $textWhite;
+    width: fit-content;
+    
+    button {
+        color: $textWhite;
+        background: none;
+        font-size: 2.3em;
+        font-weight:800;
+        box-shadow: none;
+        border: 1px solid $textWhite;
+        width: 40px;
+        border: none;
+        &.active {
+            background-color: $textWhite;
+            color: invert($color:$textWhite);
+        }
+    }
+    div {
+        position: absolute;
+        display: flex;
+        flex-direction: column;  
+        top: 101%;
+        width: fit-content;
+        background-color: hsla(0, 0%, 50%, .7);
+        height: 170%;
+        width: 230%;
+        
+        
+        a {
+            border: 1px solid white;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            
+            &:hover{
+                    background-color: $textWhite;
+                    color: invert($color:$textWhite);
+                
+            }
+            
+        }
+       
+    };
+}
+
+
+
+
 .lang {
     background: none;
     color: currentColor;
     border: none;
-    margin: 2% 7%;   
+    margin: 2% 5%;   
 }
-@media screen and (min-width: 650px), (aspect-ratio: 4/3) {
 
+ @media screen and (max-width: 580px), (aspect-ratio: 4/3) {
+
+    .dropdown-menu {
+        display: block;
+    }
     .logo {
-        font-size: 2.8em;
+        font-size: 1.8em;
         border: 3px solid ;
-    }
- }
- @media screen and (max-width: 560px), (aspect-ratio: 4/3) {
-
-    .logo {
-        font-size: 1.6em;
-    }
-    .lang{
-        position: absolute;
-        top: -10px;
-        right: 10px;
-    }
-    .link-panel a{
-        font-size: 0.9em;
     }
     #i-search {
        height: 80%;
+    }
+    .normal-menu {
+        display: none !important;
     }
  }
