--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -16,6 +16,7 @@
   gap: 2%;
   color: #f8f8ff;
   padding: 0 2%;
+  z-index: 5;
 }
 
 .logo-link {
@@ -36,6 +37,7 @@
   border: 2px solid;
   border-radius: 5%;
   width: 100%;
+  font-size: 2.5em;
   -webkit-animation-name: borderColor;
           animation-name: borderColor;
   -webkit-animation-duration: 12s;
@@ -121,15 +123,14 @@
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   position: relative;
+  gap: 2%;
 }
 
 .link-panel a {
   text-decoration: none;
   color: currentColor;
   font-size: 1.1em;
-  border-radius: 5px;
   padding: 1.5%;
-  margin: 2%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -142,34 +143,87 @@
   color: #f8f8ff;
 }
 
+.dropdown-menu {
+  display: none;
+  position: relative;
+  color: #f8f8ff;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.dropdown-menu button {
+  color: #f8f8ff;
+  background: none;
+  font-size: 2.3em;
+  font-weight: 800;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: 1px solid #f8f8ff;
+  width: 40px;
+  border: none;
+}
+
+.dropdown-menu button.active {
+  background-color: #f8f8ff;
+  color: #070700;
+}
+
+.dropdown-menu div {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  top: 101%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: rgba(128, 128, 128, 0.7);
+  height: 170%;
+  width: 230%;
+}
+
+.dropdown-menu div a {
+  border: 1px solid white;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.dropdown-menu div a:hover {
+  background-color: #f8f8ff;
+  color: #070700;
+}
+
 .lang {
   background: none;
   color: currentColor;
   border: none;
-  margin: 2% 7%;
+  margin: 2% 5%;
 }
 
-@media screen and (min-width: 650px), (aspect-ratio: 4 / 3) {
+@media screen and (max-width: 580px), (aspect-ratio: 4 / 3) {
+  .dropdown-menu {
+    display: block;
+  }
   .logo {
-    font-size: 2.8em;
+    font-size: 1.8em;
     border: 3px solid;
-  }
-}
-
-@media screen and (max-width: 560px), (aspect-ratio: 4 / 3) {
-  .logo {
-    font-size: 1.6em;
-  }
-  .lang {
-    position: absolute;
-    top: -10px;
-    right: 10px;
-  }
-  .link-panel a {
-    font-size: 0.9em;
   }
   #i-search {
     height: 80%;
+  }
+  .normal-menu {
+    display: none !important;
   }
 }
 
@@ -806,13 +860,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 2;
+  z-index: 10;
 }
 
 .popup-inner {
   position: relative;
   width: 100%;
   max-width: 1100px;
+  height: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -861,12 +916,14 @@
   padding: 5%;
 }
 
-.page-slide .active {
+.page-slider .active {
   width: 100%;
+  display: inline;
 }
 
-.page-slide img {
+.page-slider img {
   width: 100%;
+  margin: 0 auto;
 }
 
 .page-left-arrow {
