--- a/src/styles/_filmPage.scss
+++ b/src/styles/_filmPage.scss
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: column;
     margin: 2% 0;
-    gap: 10px; 
+    gap: 20px; 
     img {
         height: 35vh;
         object-fit: cover;
@@ -61,6 +61,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+
 }
 .page-header{
     width: 80%;
@@ -75,12 +76,15 @@
     }
     p {
         display: inline;
+        
     }  
 }
 .page-info{
     font-weight: 300;
     font-style: oblique;
-    margin: 1% 2%;
+    margin-left: 0;
+        
+    
 }
 .page-synopsis {
     font-size: 1.1em;
@@ -120,6 +124,7 @@
 }
 .cast {
     margin: 2%;
+    font-weight:200;
     h2 {
         margin: 1%;
     }
@@ -127,6 +132,7 @@
         text-decoration: none;
         color: currentColor;
         font-style: oblique;
+        font-weight:400;
         &:hover{
             font-weight: bolder;
         }
@@ -134,6 +140,11 @@
     li {
         margin: 0.8% 0;
         list-style: none;
+    }
+    .role{
+        display: inline;
+        font-weight: 600;
+        margin-right: .7%;
     }
 }
 .media {
