--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -2,18 +2,23 @@
     background-color: black;
     color: $textWhite;
     width: 100%; 
-    padding: 2%;
+    padding: 0 4%;  
 }
 .mySwiper {
     height: 50vh;
-    max-width: 1000px;
+    max-width: 1100px;
     margin-bottom: 5vh;
-    overflow: visible !important;  
+    overflow: visible !important;
+   
+   
       
 }
 .swiper-button-next::after, .swiper-button-prev::after {
     color: ghostwhite;
+    font-size: 4rem !important;
+    text-shadow: 0 0 10px  black;
 }
+
 .swiper-pagination {
     bottom: -7% !important;
     span {
@@ -24,70 +29,72 @@
 }
 .swiper-slide {
     height: 100%;
+    width: 100%;
 }
 .gallery-poster {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 20px ;
+    
 }
 .slide-text {
     position: absolute;
     bottom: 0;
     padding: 2%; 
     height: 35%;
+    width: 100%;
     overflow: hidden;
     color: $textWhite;
     text-shadow: 0 0 5px black;
 }
-.slide-synopsis {
-    font-size: 1em;
-}
 .slide-header {
     display: flex;
+    align-items: baseline;
     justify-content: left;
-    align-items: center;
     h2 {
-        margin: 0 1%;
+        display: inline;
         font-size: 1.8em;
+        width: fit-content;
+        margin-left: 0;
+        margin-right: 2%;
     }
     p {
+        display: inline;
         font-style: oblique;
-        margin: 1%;
+        width: fit-content;
+        margin-left: 0;
+        margin-right: auto;
+        font-size: 1.2rem;
+       
     }
 }
-.left-arrow{
-    @include sliderArrow();
-    left:3%;   
+.slide-synopsis {
+    max-width: 45rem;
+    margin-left: 0;
 }
-.right-arrow {
-    @include sliderArrow();
-    right:3%; 
-}
+
 @media screen and (max-width: 650px) {
-    .slide-header h2 {
-        font-size: 1.2em;
-    }
-    .slide-synopsis {
-        font-size: .9em;
-    }
-    .slide-info {
-        font-size: .6em;
+    .slide-header {
+        flex-direction: column;
+        p{
+            font-size: 1rem;
+        }
     }
 }
 @media screen and (max-width: 450px){
-    .slide-header{
-        display: block;
+    .slide-header h2{
+            font-size: 1.6rem;
     }
     .slide-text{
-        height: 45%;
+        height: 40%;
+    }
+    .slide-synopsis {
+        font-size: .9rem;
     }
 }
 .slide-tag {
-    width: 100%;
-    max-width: 1000px;
-    margin: 1% auto 0 auto; 
-    padding-left: 1%; 
+    max-width: 1100px;
+    font-size: 1.1rem;
 }
         /*      SUBSLIDE     */
 
@@ -95,34 +102,35 @@
 display: flex;
 position: relative;
 align-items: center;
-width: 100%;
-max-width: 1000px;
+max-width: 1100px;
+padding: 0;
 overflow-x: scroll;
 overflow-y: hidden;
 border-top: 2px solid white;
 scroll-behavior: smooth; 
 padding-top: .5%;
+margin-bottom: 1.5%;
 } 
 .subSlide-button {
     cursor: pointer;
     user-select: none;
     z-index: 4;
     position: sticky;
-    border: 1px solid white;
-    opacity: 0.8;
-    border-radius: 5px;
-    background-color: hsla(0, 0%, 100%, 0.2);
+    color: $textWhite;
+    background: none;
+    border: none;
+    
     svg {
         position: static;
         width: 7vh;    
     }
 }
 .button-prev  {
-    left: 0;
-    margin-right: -7%;  
+    left: 1%;
+     
 }
 .button-next{
-    right: 0;
+    right: 1%;
     margin-left: auto;   
 }
 
@@ -134,7 +142,6 @@ padding-top: .5%;
     margin: 0.5% .75%;
     position: relative;
     transition: transform 0.3s;
-    
     img {
         object-fit: contain;
         height: 100%;  
