--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,62 +1,35 @@
-
-.nav-bar {
+.nav-bar{
+    width: 100%;
+    background: black;
+    padding: 0 3%;
+}
+.nav-container {
     display: flex;
     height: 10vh ;
     min-height: 80px;
     width: 100%;
+    max-width: 1100px;
     align-items: center;
-    justify-content: space-betweenx;
-    background: black;
-    z-index: 1;
+    justify-content: space-between;
     gap: 2%;
     color: $textWhite;
-    padding: 0 2%;
     z-index: 5;
-
 }
 .logo-link{
-    display: flex;
-    align-items: center;
-    height: inherit;
     text-decoration: none;
     color: currentColor;
-    font-size: .9em;  
+    margin: 0;
+    
 }
 .logo {
     font-family: $logoFont;
-    border: 2px solid ;
-    border-radius: 5%;
     width: 100%;
-    font-size: 2.5em;
-    animation-name: borderColor;
-	animation-duration: 12s;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	animation-timing-function: linear; 
-}
-
-@keyframes borderColor {
-	0% {
-        border-color: #FF595E;
-        box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E ;
+    font-size: 2.8em;
+    border: none;
+    span {
+        font-family: $logoFont;
+        @include colorAnimation();
     }
-	25% {
-		border-color: #FFCA3A;
-        box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A ;
-	}
-	50% {
-		border-color: #8AC926;
-        box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926 ;
-	}
-	75% {
-		border-color: #1982C4;
-        box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p#1982C4 ;
-	}
-	100% {
-		border-color: #6A4C93;
-        box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93 ;
-
-	}
 }
 
 .link-panel {
@@ -67,27 +40,26 @@
     height: fit-content;
     flex-wrap: nowrap;   
     position: relative;
+    margin: 0;
     gap: 2%;
     a {
         text-decoration: none;
         color: currentColor;
-        font-size: 1.1em;
+        font-size: 1.2rem;
         padding: 1.5%;
         display: flex;
         align-items: center; 
     }
 }
-
 #i-search {
     color: $textWhite;
+    
 }
-
 .dropdown-menu {
     display: none;
     position: relative;
     color: $textWhite;
     width: fit-content;
-    
     button {
         color: $textWhite;
         background: none;
@@ -111,34 +83,30 @@
         background-color: hsla(0, 0%, 50%, .7);
         height: 170%;
         width: 230%;
-        
-        
         a {
             border: 1px solid white;
             width: 100%;
             height: 100%;
             display: flex;
             justify-content: center;
-            
             &:hover{
                     background-color: $textWhite;
                     color: invert($color:$textWhite);
-                
-            }
-            
+            }   
         }
-       
-    };
+    }
 }
-
-
-
 
 .lang {
     background: none;
     color: currentColor;
     border: none;
-    margin: 2% 5%;   
+    margin: 2% 5%;
+    font-size: .9rem;
+    b {
+        font-weight:bolder;
+        text-decoration: underline;
+    }   
 }
 
  @media screen and (max-width: 580px), (aspect-ratio: 4/3) {
@@ -147,8 +115,8 @@
         display: block;
     }
     .logo {
-        font-size: 1.8em;
-        border: 3px solid ;
+        font-size: 2em;
+        
     }
     #i-search {
        height: 80%;
