--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,47 +1,47 @@
 .nav-bar {
+  width: 100%;
+  background: black;
+  padding: 0 3%;
+}
+
+.nav-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   height: 10vh;
   min-height: 80px;
   width: 100%;
+  max-width: 1100px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-betweenx;
-      -ms-flex-pack: space-betweenx;
-          justify-content: space-betweenx;
-  background: black;
-  z-index: 1;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   gap: 2%;
   color: #f8f8ff;
-  padding: 0 2%;
   z-index: 5;
 }
 
 .logo-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: inherit;
   text-decoration: none;
   color: currentColor;
-  font-size: .9em;
+  margin: 0;
 }
 
 .logo {
   font-family: "Major Mono Display", monospace;
-  border: 2px solid;
-  border-radius: 5%;
   width: 100%;
-  font-size: 2.5em;
-  -webkit-animation-name: borderColor;
-          animation-name: borderColor;
-  -webkit-animation-duration: 12s;
-          animation-duration: 12s;
+  font-size: 2.8em;
+  border: none;
+}
+
+.logo span {
+  font-family: "Major Mono Display", monospace;
+  -webkit-animation-name: rainbow;
+          animation-name: rainbow;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
@@ -50,59 +50,39 @@
           animation-timing-function: linear;
 }
 
-@-webkit-keyframes borderColor {
+@-webkit-keyframes rainbow {
   0% {
-    border-color: #FF595E;
-    -webkit-box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E;
-            box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E;
+    color: #FF595E;
   }
   25% {
-    border-color: #FFCA3A;
-    -webkit-box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A;
-            box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A;
+    color: #FFCA3A;
   }
   50% {
-    border-color: #8AC926;
-    -webkit-box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926;
-            box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926;
+    color: #8AC926;
   }
   75% {
-    border-color: #1982C4;
-    -webkit-box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p #1982C4;
-            box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p #1982C4;
+    color: #1982C4;
   }
   100% {
-    border-color: #6A4C93;
-    -webkit-box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93;
-            box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93;
+    color: #6A4C93;
   }
 }
 
-@keyframes borderColor {
+@keyframes rainbow {
   0% {
-    border-color: #FF595E;
-    -webkit-box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E;
-            box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E;
+    color: #FF595E;
   }
   25% {
-    border-color: #FFCA3A;
-    -webkit-box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A;
-            box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A;
+    color: #FFCA3A;
   }
   50% {
-    border-color: #8AC926;
-    -webkit-box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926;
-            box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926;
+    color: #8AC926;
   }
   75% {
-    border-color: #1982C4;
-    -webkit-box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p #1982C4;
-            box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p #1982C4;
+    color: #1982C4;
   }
   100% {
-    border-color: #6A4C93;
-    -webkit-box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93;
-            box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93;
+    color: #6A4C93;
   }
 }
 
@@ -123,13 +103,14 @@
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   position: relative;
+  margin: 0;
   gap: 2%;
 }
 
 .link-panel a {
   text-decoration: none;
   color: currentColor;
-  font-size: 1.1em;
+  font-size: 1.2rem;
   padding: 1.5%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -209,6 +190,12 @@
   color: currentColor;
   border: none;
   margin: 2% 5%;
+  font-size: .9rem;
+}
+
+.lang b {
+  font-weight: bolder;
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 580px), (aspect-ratio: 4 / 3) {
@@ -216,8 +203,7 @@
     display: block;
   }
   .logo {
-    font-size: 1.8em;
-    border: 3px solid;
+    font-size: 2em;
   }
   #i-search {
     height: 80%;
@@ -231,18 +217,20 @@
   background-color: black;
   color: #f8f8ff;
   width: 100%;
-  padding: 2%;
+  padding: 0 4%;
 }
 
 .mySwiper {
   height: 50vh;
-  max-width: 1000px;
+  max-width: 1100px;
   margin-bottom: 5vh;
   overflow: visible !important;
 }
 
 .swiper-button-next::after, .swiper-button-prev::after {
   color: ghostwhite;
+  font-size: 4rem !important;
+  text-shadow: 0 0 10px  black;
 }
 
 .swiper-pagination {
@@ -257,6 +245,7 @@
 
 .swiper-slide {
   height: 100%;
+  width: 100%;
 }
 
 .gallery-poster {
@@ -264,7 +253,6 @@
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 20px;
 }
 
 .slide-text {
@@ -272,99 +260,77 @@
   bottom: 0;
   padding: 2%;
   height: 35%;
+  width: 100%;
   overflow: hidden;
   color: #f8f8ff;
   text-shadow: 0 0 5px black;
-}
-
-.slide-synopsis {
-  font-size: 1em;
 }
 
 .slide-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .slide-header h2 {
-  margin: 0 1%;
+  display: inline;
   font-size: 1.8em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: 0;
+  margin-right: 2%;
 }
 
 .slide-header p {
+  display: inline;
   font-style: oblique;
-  margin: 1%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: 0;
+  margin-right: auto;
+  font-size: 1.2rem;
 }
 
-.left-arrow {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  z-index: 4;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  width: auto;
-  height: auto;
-  background: none;
-  border: none;
-  left: 3%;
-}
-
-.right-arrow {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  z-index: 4;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  width: auto;
-  height: auto;
-  background: none;
-  border: none;
-  right: 3%;
+.slide-synopsis {
+  max-width: 45rem;
+  margin-left: 0;
 }
 
 @media screen and (max-width: 650px) {
-  .slide-header h2 {
-    font-size: 1.2em;
+  .slide-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-  .slide-synopsis {
-    font-size: .9em;
-  }
-  .slide-info {
-    font-size: .6em;
+  .slide-header p {
+    font-size: 1rem;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .slide-header {
-    display: block;
+  .slide-header h2 {
+    font-size: 1.6rem;
   }
   .slide-text {
-    height: 45%;
+    height: 40%;
+  }
+  .slide-synopsis {
+    font-size: .9rem;
   }
 }
 
 .slide-tag {
-  width: 100%;
-  max-width: 1000px;
-  margin: 1% auto 0 auto;
-  padding-left: 1%;
+  max-width: 1100px;
+  font-size: 1.1rem;
 }
 
 /*      SUBSLIDE     */
@@ -376,13 +342,14 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100%;
-  max-width: 1000px;
+  max-width: 1100px;
+  padding: 0;
   overflow-x: scroll;
   overflow-y: hidden;
   border-top: 2px solid white;
   scroll-behavior: smooth;
   padding-top: .5%;
+  margin-bottom: 1.5%;
 }
 
 .subSlide-button {
@@ -394,10 +361,9 @@
   z-index: 4;
   position: -webkit-sticky;
   position: sticky;
-  border: 1px solid white;
-  opacity: 0.8;
-  border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.2);
+  color: #f8f8ff;
+  background: none;
+  border: none;
 }
 
 .subSlide-button svg {
@@ -406,12 +372,11 @@
 }
 
 .button-prev {
-  left: 0;
-  margin-right: -7%;
+  left: 1%;
 }
 
 .button-next {
-  right: 0;
+  right: 1%;
   margin-left: auto;
 }
 
@@ -484,7 +449,7 @@
 
 .catalog-body {
   width: 100%;
-  min-height: 90vh;
+  min-height: 85vh;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -505,13 +470,16 @@
   max-width: 950px;
   margin: 2% auto;
   color: #f8f8ff;
+  font-size: 1.2rem;
 }
 
 .filter-container input {
   width: 100%;
+  height: 2rem;
   max-width: 450px;
   margin-left: 1%;
   border-radius: 5px;
+  font-size: 1rem;
 }
 
 .main-list {
@@ -555,17 +523,16 @@
 .paginationBttns li a {
   height: auto;
   cursor: pointer;
+  font-size: 1.5rem;
 }
 
 .paginationActive a {
-  font-weight: bolder;
-  font-size: 1.1em;
-  color: #6A4C93;
+  color: #FFCA3A;
   border-radius: 5%;
 }
 
-.previous, .next {
-  font-size: 1.6em;
+.previousBttn, .nextBttn {
+  font-size: 2.5rem !important;
   margin: 0 10%;
 }
 
@@ -670,7 +637,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   margin: 2% 0;
-  gap: 10px;
+  gap: 20px;
 }
 
 .page-first img {
@@ -726,7 +693,7 @@
 .page-info {
   font-weight: 300;
   font-style: oblique;
-  margin: 1% 2%;
+  margin-left: 0;
 }
 
 .page-synopsis {
@@ -777,6 +744,7 @@
 
 .cast {
   margin: 2%;
+  font-weight: 200;
 }
 
 .cast h2 {
@@ -787,6 +755,7 @@
   text-decoration: none;
   color: currentColor;
   font-style: oblique;
+  font-weight: 400;
 }
 
 .cast a:hover {
@@ -796,6 +765,12 @@
 .cast li {
   margin: 0.8% 0;
   list-style: none;
+}
+
+.cast .role {
+  display: inline;
+  font-weight: 600;
+  margin-right: .7%;
 }
 
 .media {
@@ -1153,20 +1128,29 @@
 }
 
 .loader {
-  font-family: "Major Mono Display", monospace;
-  border: 2px solid;
   padding: 3px;
-  border-radius: 5%;
-  font-size: 5em;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
   margin: auto;
   margin-top: 10%;
-  -webkit-animation-name: borderLoader;
-          animation-name: borderLoader;
-  -webkit-animation-duration: 3s;
-          animation-duration: 3s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.loader h1 {
+  border-radius: 5%;
+  font-family: "Major Mono Display", monospace;
+  font-size: 9em;
+  border: 8px solid currentColor;
+  -webkit-box-shadow: 4px currentColor, -4px currentColor;
+          box-shadow: 4px currentColor, -4px currentColor;
+  -webkit-animation-name: rainbow;
+          animation-name: rainbow;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
@@ -1175,70 +1159,27 @@
           animation-timing-function: linear;
 }
 
-@-webkit-keyframes borderLoader {
+@keyframes rainbow {
   0% {
     color: #FF595E;
-    border-color: #FF595E;
-    -webkit-box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E;
-            box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E;
   }
   25% {
     color: #FFCA3A;
-    border-color: #FFCA3A;
-    -webkit-box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A;
-            box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A;
   }
   50% {
     color: #8AC926;
-    border-color: #8AC926;
-    -webkit-box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926;
-            box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926;
   }
   75% {
     color: #1982C4;
-    border-color: #1982C4;
-    -webkit-box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p #1982C4;
-            box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p #1982C4;
   }
   100% {
     color: #6A4C93;
-    border-color: #6A4C93;
-    -webkit-box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93;
-            box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93;
   }
 }
 
-@keyframes borderLoader {
-  0% {
-    color: #FF595E;
-    border-color: #FF595E;
-    -webkit-box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E;
-            box-shadow: 2px 2px 2px 1px #FF595E, -2px -2px 2px 1px #FF595E;
-  }
-  25% {
-    color: #FFCA3A;
-    border-color: #FFCA3A;
-    -webkit-box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A;
-            box-shadow: 2px 2px 2px 1px #FFCA3A, -2px -2px 2px 1px #FFCA3A;
-  }
-  50% {
-    color: #8AC926;
-    border-color: #8AC926;
-    -webkit-box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926;
-            box-shadow: 2px 2px 2px 1px #8AC926, -2px -2px 2px 1px #8AC926;
-  }
-  75% {
-    color: #1982C4;
-    border-color: #1982C4;
-    -webkit-box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p #1982C4;
-            box-shadow: 2px 2px 2px 1px #1982C4, -2px -2px 2px 1p #1982C4;
-  }
-  100% {
-    color: #6A4C93;
-    border-color: #6A4C93;
-    -webkit-box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93;
-            box-shadow: 2px 2px 2px 1px #6A4C93, -2px -2px 2px 1px #6A4C93;
-  }
+.loader p {
+  margin: 0 auto;
+  font-size: 1.5rem;
 }
 
 .footer {
@@ -1252,6 +1193,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer p {
@@ -1260,6 +1204,7 @@
   width: fit-content;
   margin: .5% 3%;
   font-size: .9em;
+  height: 100%;
 }
 
 .footer a {
