--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,6 +14,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
   };
+
   .App {
     width: 100%;
     margin: 0 auto;
@@ -23,50 +24,25 @@
   }
 
   .loader {
-    font-family: $logoFont;
-    border: 2px solid;
     padding: 3px;
-    border-radius: 5%;
-    font-size: 5em;
-    width: fit-content;
     margin: auto;
     margin-top:10%;
-    animation-name: borderLoader;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: linear; 
-  }
-  
-  @keyframes borderLoader {
-    0% {
-      color: $colorPalette1;
-      border-color: $colorPalette1;
-      box-shadow: 2px 2px 2px 1px $colorPalette1, -2px -2px 2px 1px $colorPalette1 ;
+    display: flex;
+    flex-direction: column;
+    h1{
+      border-radius: 5%;
+      font-family: $logoFont;
+      font-size: 9em;
+      border: 8px solid currentColor;
+      box-shadow: 4px currentColor, -4px currentColor ;
+      @include colorAnimation();
     }
-    25% {
-        color: $colorPalette2;
-          border-color: $colorPalette2;
-        box-shadow: 2px 2px 2px 1px $colorPalette2, -2px -2px 2px 1px $colorPalette2 ;
-    }
-    50% {
-      color: $colorPalette3;
-      border-color: $colorPalette3;
-      box-shadow: 2px 2px 2px 1px $colorPalette3, -2px -2px 2px 1px $colorPalette3 ;
-    }
-    75% {
-      color: $colorPalette4;
-      border-color: $colorPalette4;
-      box-shadow: 2px 2px 2px 1px $colorPalette4, -2px -2px 2px 1p$colorPalette4 ;
-    }
-    100% {
-      color: $colorPalette5;
-      border-color: $colorPalette5;
-      box-shadow: 2px 2px 2px 1px $colorPalette5, -2px -2px 2px 1px $colorPalette5 ;
-  
+    p{
+      margin: 0 auto;
+      font-size: 1.5rem;
     }
   }
-
+  
 
 
   .footer {
@@ -76,11 +52,13 @@
     margin-top: auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     
     p{
       width: fit-content;
       margin: .5% 3%;
       font-size: .9em;
+      height: 100%;
     }
     a {
       text-decoration: none;
