--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -2,6 +2,7 @@
     width: 100%;
     background: black;
     padding: 0 3%;
+   
 }
 .nav-container {
     display: flex;
@@ -11,9 +12,10 @@
     max-width: 1100px;
     align-items: center;
     justify-content: space-between;
-    gap: 2%;
+    gap: 3%;
     color: $textWhite;
-    z-index: 5;
+    z-index: 5; 
+    
 }
 .logo-link{
     text-decoration: none;
@@ -33,22 +35,22 @@
 }
 
 .link-panel {
-    width: fit-content;
-    max-width: 50%;
+    min-width: fit-content;
+    width: 100%;
     display: flex;
-    justify-content: flex-end;
-    height: fit-content;
-    flex-wrap: nowrap;   
-    position: relative;
-    margin: 0;
+    justify-content: right;
     gap: 2%;
+     
     a {
         text-decoration: none;
         color: currentColor;
         font-size: 1.2rem;
         padding: 1.5%;
         display: flex;
-        align-items: center; 
+        align-items: center;
+        width: fit-content;
+        margin: 0;
+        
     }
 }
 #i-search {
@@ -60,6 +62,8 @@
     position: relative;
     color: $textWhite;
     width: fit-content;
+    z-index: 999999;
+    margin: 0;
     button {
         color: $textWhite;
         background: none;
@@ -83,6 +87,8 @@
         background-color: hsla(0, 0%, 50%, .7);
         height: 170%;
         width: 230%;
+       
+        
         a {
             border: 1px solid white;
             width: 100%;
@@ -101,7 +107,7 @@
     background: none;
     color: currentColor;
     border: none;
-    margin: 2% 5%;
+    margin: 0 2%;
     font-size: .9rem;
     b {
         font-weight:bolder;
