--- a/src/styles/_aboutContact.scss
+++ b/src/styles/_aboutContact.scss
@@ -25,14 +25,12 @@
         object-fit: cover;
     }
     h1 {
-        font-size: 3em;
+        font-family: $logoFont;
+        font-size: 2.8em;
         font-weight: 300;
-        font-style: oblique;
         margin: auto auto 0 5%;
         line-height: 1;
         margin-top: 5%;
-        
-        
     }
     p {
         max-width: 400px;
@@ -57,7 +55,6 @@
             z-index: -1;
         }
         p {
-            
             margin-bottom: 10%;
         }
         
@@ -74,7 +71,8 @@
     max-width: 600px;
     width: 90%;
     margin: 0 auto;
-    padding-top: 6vh;   
+    padding-top: 6vh; 
+    font-weight: 500;  
 }
 .form-body { 
     width: 90%; 
