--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -56,6 +56,7 @@
     h2 {
         display: inline;
         font-size: 1.8em;
+        font-weight: 500;
         width: fit-content;
         margin-left: 0;
         margin-right: 2%;
@@ -180,6 +181,7 @@ div {
         font-size: 0.8em;
         h2 {
             font-size: 1.3em;
+            font-weight: 500;
         }
         i {
             margin-top: 0;
