css + react-script update

--- a/src/styles/_aboutContact.scss
+++ b/src/styles/_aboutContact.scss
@@ -69,6 +69,7 @@
 }
 .contact-title {
     max-width: 600px;
+    font-family: $logoFont;
     width: 90%;
     margin: 0 auto;
     padding-top: 6vh; 
