css button form

--- a/src/styles/_aboutContact.scss
+++ b/src/styles/_aboutContact.scss
@@ -99,11 +99,13 @@
         margin-top: 3%;
     }
     button {
-        width: 30%;
+        
         margin: 2% auto;
         background: none;
         border: 1px solid black;
         border-radius: 3px;
+        font-size: 1.1rem;
+        padding: 8px 24px ;
 
     }
     div {
