--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1237,11 +1237,12 @@
 }
 
 .form-body button {
-  width: 30%;
   margin: 2% auto;
   background: none;
   border: 1px solid black;
   border-radius: 3px;
+  font-size: 1.1rem;
+  padding: 8px 24px;
 }
 
 .form-body div {
